--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -25,7 +25,7 @@ body {
     <div id="overlayTask" class="overlayTask"  th:fragment="task">
         <div class="container">
             <h1>Task Form</h1>
-            <form action="#" th:action="@{/save}" th:object="${task}" method="post" onsubmit="return confirm('Are you sure you wish to submit?');">
+            <form action="#" th:action="@{/task/createtask}" th:object="${taskDto}" method="post" onsubmit="return confirm('Are you sure you wish to submit?');">
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" required>
 
