new file:   manager-images/cooleffect.PNG 	new file:   src/main/java/com/gp2/appwebeventsmanagementgp2/configurations/EnvironmentVariables.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/configurations/SecurityConfig.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventRestController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/dto/EventDto.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/models/event.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/EventService.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/services/EventServiceImpl.java 	modified:   src/main/resources/application.properties 	new file:   src/main/resources/static/js/fetchData.js 	new file:   src/main/resources/templates/ImageUpload.html 	modified:   src/main/resources/templates/Lists.html 	modified:   src/main/resources/templates/createEventForm.html 	modified:   src/main/resources/templates/eventTab.html 	modified:   src/main/resources/templates/index.html 	modified:   src/main/resources/templates/navigation.html 	new file:   src/main/resources/templates/topBar.html

--- a/src/main/resources/templates/Lists.html
+++ b/src/main/resources/templates/Lists.html
@@ -34,6 +34,7 @@
                 <td th:text="${event.getName()}"></td>
                 <td th:text="${event.getDateModified()}"></td>
             </tr>
+            <tr th:text="${hey}"></tr>
         </tbody>
     </table>
     <table class="tabTable" th:fragment="taskList">
