--- a/src/main/resources/templates/createEventForm.html
+++ b/src/main/resources/templates/createEventForm.html
@@ -11,7 +11,7 @@
     <div id="overlay" class="overlay"  th:fragment="createEventForm">
         <div class="form-container">
             <h2 style="margin-bottom: 30px;"><center>Fill out the form then Click "Submit" to create an Event:</center></h2>
-            <form id="myForm" class="createEventForm" th:action="@{/events}" method="post" onsubmit="return confirm('Are you sure?');">
+            <form id="myForm" class="createEventForm" th:action="@{/events/create}" method="post" onsubmit="return confirm('Are you sure?');">
                 <div class="formdet"><label for="eventName">Event Name:</label>
                     <input type="text" id="eventName" name="eventName" required><br><br>
                 </div>
@@ -25,9 +25,8 @@
 
                 <div class="formdet"><label for="eventVenue">Event Venue:</label>
                     <select id="country" name="country" required>
-                        <option value="" th:each="venue : ${venueList}">{{venue.getName}}</option>
-                      </select>
-                    <input type="text" id="eventVenue" name="eventVenue"><br><br>
+                        <option value="" th:each="venue : ${venueList}" th:text="${venue.getName()}"></option>
+                    </select>
                 </div>
 
                 <div class="formdet"> <label for="description">Description:</label>
@@ -40,6 +39,10 @@
 
                 <div class="formdet"> <label for="type">Types:</label>
                     <input type="text" id="type" name="type" ><br><br>
+                </div>
+
+                <div class="formdet"> <label for="type">Event Image</label>
+                    <input type="file" name="image" accept="image/*" class="form-control-file"><br><br>
                 </div>
 
                 <div class="formdet"> <label for="paidEvent">	Paid Event:</label>
