--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -25,7 +25,7 @@
                 </li>
 
                 <li>
-                    <a th:href= "@{/events}">
+                    <a th:href= "@{/events/view}">
                         <span class="icon">
                             <ion-icon name="calendar-outline"></ion-icon>
                         </span>
@@ -79,8 +79,9 @@
                 </li>
             </ul>
         </div>
-            <!-- =========== Scripts =========  -->
-    <script src="static/js/main.js"></script>
+            
+    <!-- =========== Scripts =========  -->
+    <script src="../js/nav.js"></script>
 
     <!-- ====== ionicons ======= -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
