--- a/src/main/resources/static/css/dashboard.css
+++ b/src/main/resources/static/css/dashboard.css
@@ -449,13 +449,30 @@ textarea {
   margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
+
 }
 
-select {
-  background-color: #f5f5f5;
+.formt {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  padding: 5px;
+  margin: 10px 0;
 }
+
 }
 .fbtn:hover{
   color: rgb(0, 0, 0);
   cursor: pointer;
+}
+
+.formdt{
+  font-weight: 600;
+        font-size: larger;
+        margin-right: 10px;
+        display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
