--- a/src/main/resources/templates/Lists.html
+++ b/src/main/resources/templates/Lists.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
->
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -95,4 +94,5 @@
         </tbody>
     </table>
 
+    <div class="eventImage" th:fragment="eventImage"></div>
 </body></html>
