--- a/src/main/resources/templates/Contact.html
+++ b/src/main/resources/templates/Contact.html
@@ -14,7 +14,9 @@
 		<div class="container">
 			<div class="navigation" th:replace="~{navigation :: navigation}">
 			</div>
+			
 			<!-- ========================= Main ==================== -->
+			
 			<div class="main">
 				<div class="topbar">
 					<div class="toggle">
@@ -26,7 +28,26 @@
 							<input type="text" placeholder="Search here">
 							<ion-icon name="search-outline"></ion-icon>
 						</label>
+						<div class="container">
+							<div class="row">
+								<div class="col-md-8">
+										<nav style="--bs-breadcrumb-divider:'>'" aria-label="breadcrumb">
+										
+											<li class="breadcrumb-item">
+												<a th:href= "@{/admin-page}">Home</a>
+											</li>
+											<li class="breadcrumb-item active" aria-current="page">contact
+				
+											</li>
+										
+								
+										</nav>
+								</div>
+							</div>
+							
+						 </div>
 					</div>
+					
 					<div class="user">
 						<img src="assets/imgs/customer01.jpg" alt="">
 					</div>
