--- a/src/main/resources/templates/createEventForm.html
+++ b/src/main/resources/templates/createEventForm.html
@@ -35,10 +35,11 @@
 
                 <div class="formdet"><label for="eventVenue">Event Venue:</label>
                     <div class="button-select-container">
+                        <div class="custom">
                     <select class="formt" id="country" name="eventVenue" required >
                         <option selected>Select or Create Venue</option>
                         <option   th:each="venue : ${venueList}" th:text="${venue.getName()}" th:value="${venue.getId()}"></option>
-                      </select>
+                      </select></div>
                       <button type="button" class="addvenue" id="addVenueBtn">Add Venue</button> </div>
 
                     <br><br>
@@ -73,10 +74,10 @@
 
                 <div class="formdet"><label for="eventType">Event Type:</label>
 
-                    <select class="formt" id="country"  name="eventType" style="width: fit-content;" required >
+                   <div class="custom" style="min-width: 250px;" > <select  id="country"  name="eventType" required >
                         <option selected>Select a Type of Event</option>
                         <option   th:each="type : ${typeList}" th:text="${type.getName()}" th:value="${type.getId()}"></option>
-                      </select>
+                      </select></div>
 
 
                     <br><br>
