modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/configurations/EnvironmentVariables.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/UserController.java 	modified:   src/main/java/com/gp2/appwebeventsmanagementgp2/controller/eventController.java 	modified:   src/main/resources/static/css/eventTab.css 	modified:   src/main/resources/static/css/styles.css 	modified:   src/main/resources/static/js/lists.js 	renamed:    manager-images/cooleffect.PNG -> src/main/resources/static/manager-images/cooleffect.PNG 	renamed:    manager-images/login.PNG -> src/main/resources/static/manager-images/login.PNG 	new file:   src/main/resources/static/manager-images/sfsd.jpg 	modified:   src/main/resources/templates/Lists.html 	modified:   src/main/resources/templates/eventTab.html 	modified:   src/main/resources/templates/navigation.html 	modified:   src/main/resources/templates/topBar.html

--- a/src/main/resources/templates/Lists.html
+++ b/src/main/resources/templates/Lists.html
@@ -20,10 +20,10 @@
             </tr>
         </thead>
         <tbody class="table-group-divider">
-            <tr class="table-primary" th:each="event : ${eventList}">
+            <tr class="table-primary" th:each="event : ${eventList}" th:classappend="${event.id==1} ? selected">
                 <td scope="row" class="check">
                     <label for="row-1"></label>
-                    <input type="radio" name="row-1" id="row-1" title="selectRow" th:checked="${event.getId()==1}">
+                    <input type="radio" name="row-1" id="row-1" title="selectRow" th:checked= "${event.id==1} ? true">
                 </td>
                 <td th:text="${event.getName()}" ></td>
                 <td th:text="${event.getType()}"></td>
