--- a/src/main/resources/templates/topBar.html
+++ b/src/main/resources/templates/topBar.html
@@ -9,7 +9,10 @@
             <ion-icon name="search-outline"></ion-icon>
         </label>
     </div>
-    <div class="user">
-        <img src="assets/imgs/customer01.jpg" alt="">
+    <div class="userDetails">
+        <span class="username" th:text="${user.fullname}"></span>
+        <div class="user">
+            <img src="manager-images/sfsd.jpg" alt="">
+        </div>
     </div>
 </div>
