--- a/src/main/resources/static/css/eventTab.css
+++ b/src/main/resources/static/css/eventTab.css
@@ -1,27 +1,3 @@
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,700&display=swap');
-
-:root{
-    --main-color:#4AA3FC;
-    --main-color-variation1:#16B1FF;
-    --main-color1-low-opacity:#d1f0ff;
-    --main-color-variation2:#37BAFD;
-    --mint-accent-color:#9EFFEC;
-    --greyish-color:#A6A6A6;
-    --blackish-color:#4B4B4B;
-    --body-color:#FCFCFC;
-    --side-color:#F4F8F9;
-}
-
-*{
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    margin: 0;
-    padding: 0;
-    font-family: "Poppins", 'Segoe UI', sans-serif,  Tahoma, Geneva, Verdana;
-    overflow-wrap: break-word;
-    overflow: hidden;
-} */
-
 a{
     text-decoration: none;
 }
@@ -89,6 +65,7 @@ table{
 
 main{
     padding: 0 20px;
+    position: relative;
 }
 .main{
     width: calc(100% - 300px - 400px) !important;
@@ -104,14 +81,31 @@ aside{
     background: var(--white);
     box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
     right: 0;
-
-    .info{
-        display: flex;
-        justify-content: center;
-        padding: 10px;
-    }
 }
 
+
+.info{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px;
+}
+
+.userImg{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    overflow: hidden;
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+}
+
+.eventImage{
+    max-width: 400px;
+}
 .myprimarybtn{
     background-color: var(--blue);
     color: var(--white);
@@ -122,4 +116,10 @@ aside{
 }
 .myprimarybtn:hover{
     cursor: pointer;
+}
+
+.pagination{
+    position: absolute;
+    bottom: 50px;
+    left: 45%;
 }
