--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,83 +1,24 @@
-/* @charset "ISO-8859-1";
-
-body {
-            font-family: Arial, sans-serif;
-            background-color: #0e2433;
-            color: white;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-
-        .container {
-            max-width: 400px;
-            margin: 0 auto;
-            padding: 20px;
-            background-color: #0e2433;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-        }
-
-        h2 {
-            color: #45b6fe;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-            text-align: left;
-        }
-
-        input[type="text"],
-        input[type="password"],
-        input[type="email"] {
-            width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            background-color: #fff;
-            color: #0e2433;
-        }
-
-        input[type="submit"] {
-            background-color: #45b6fe;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .message {
-            background-color: #45b6fe;
-            color: white;
-            padding: 10px;
-            margin-top: 20px;
-            border-radius: 5px;
-        } */
-
 /* =========== Google Fonts ============ */
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* =============== Globals ============== */
 * {
-  font-family: "Ubuntu", sans-serif;
+  font-family: "Poppins","Ubuntu", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 :root {
-  --blue: #08e005;
+  --blue: #16b1ff;
+  --blue2: #4aa3fc;
+  --blue3: #9effec;
   --white: #fff;
   --gray: #f5f5f5;
   --black1: #222;
   --black2: #999;
+  --black3: #4b4b4b;
 }
 
 body {
@@ -160,6 +101,13 @@ body {
     border-radius: 50%;
     overflow: hidden;
     cursor: pointer;
+  }
+
+  .userDetails{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
   }
 
   .user img {
