--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
     <link rel="stylesheet" th:href="@{css/navStyle.css}">
 </head>
 <body>
@@ -18,7 +20,7 @@
                 <li>
                     <a th:href= "@{/admin-page}">
                         <span class="icon">
-                            <ion-icon name="home-outline"></ion-icon>
+                            <ion-icon name="home"></ion-icon>
                         </span>
                         <span class="title">Dashboard</span>
                     </a>
