--- a/src/main/resources/templates/createEventForm.html
+++ b/src/main/resources/templates/createEventForm.html
@@ -29,7 +29,10 @@
                         <option selected>Select or Create Venue</option>
                         <option   th:each="venue : ${venueList}" th:text="${venue.getName()}" th:value="${venue.getId()}"></option>
                       </select>
-                      <a  class="addvenue" href="#">Add Venue</a> </div>
+                      <a  class="addvenue" th:href="@{/venue/new}">Add Venue</a> </div>
+                      <div class="createVenueform">
+
+                      </div>
 
                     <br><br>
                 </div>
